Finish Data.from(map). WIP is completed.